--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require": {
         "ext-pdo": "*"
     },
+    "bin": ["bin/formulame"],
     "minimum-stability": "dev",
     "prefer-stable": true
 }
